tests/parser/fail/super-block-param.som
"test:
failMessage:
  - contains: define
  - contains: super
"

SuperBlockParam = (
  test = (
    [ :super | 42 ] value.
  )
)
